test2-2023-05-08.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 3.1284 seconds

  ----Wall Time----  ----Name----
    3.1230 ( 99.8%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    2.9960 ( 95.8%)    Parse modules
    0.0054 (  0.2%)  Rest
    3.1284 (100.0%)  Total

{
  totalTime: 3.152,
  maxMemory: 171950080
}
